--- a/src/styles.css
+++ b/src/styles.css
@@ -30,3 +30,45 @@ footer{
     top: 95%;
     width: 100%;
 }
+.login{
+    display: grid;
+    text-align: center;
+    margin: 10% 0;
+}
+input{
+    margin: 15px 0;
+    padding: 8px 10px;
+}
+
+.input{
+    border: 2px solid white;
+    border-radius: 1rem;
+    min-width: 120px;
+    max-width: 300px;
+    /* width: 50%; */
+}
+.input-sub{
+    border: 2px solid white;
+    border-radius: 1rem;
+    min-width: 100px;
+
+}
+.success{
+    border: 2px solid greenyellow;
+    border-radius: 1rem;
+    color: greenyellow;
+    margin: auto;
+    padding: 7px 20px;
+}
+.input.ng-touched.ng-invalid{
+    border-bottom: 2px solid red;
+    border-left: 2px solid red;
+}
+.input.ng-touched.ng-valid{
+    border-bottom: 2px solid greenyellow;
+    border-left: 2px solid greenyellow;
+}
+input:disabled{
+    border: 2px solid gray;
+    color: gray;
+}
