--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,11 @@
-<div class="m-4">
-    <a class="border-none " routerLink="/">Go back</a>
-</div>
+<app-menus></app-menus>
 <div>
     <form class="login" [formGroup]="activeForm" (ngSubmit)="submitLogin()">
         <div>
             <h2 class="text-5xl">Log In</h2>
         </div>
         <div class="grid text-center m-auto">
-            <input class="input" type="text" id="" placeholder="GitHub..." formControlName="email">
+            <input class="input" type="text" id="" placeholder="email..." formControlName="email">
             <input class="input" type="text" id="" placeholder="Password..." formControlName="password" >
         </div>
         <div>
