--- a/src/app/share/header/header.component.html
+++ b/src/app/share/header/header.component.html
@@ -1,3 +1,3 @@
 <header>
-    <h1 class="text-center text-7xl" [ngClass]="margin ? 'p-20' : 'p-10' ">Hello, Dev</h1>
+    <h1 class="text-center text-7xl" [ngClass]="margin ? 'p-20' : '' ">Hello, Dev</h1>
 </header>
