--- a/src/styles.css
+++ b/src/styles.css
@@ -72,3 +72,5 @@ input:disabled{
     border: 2px solid gray;
     color: gray;
 }
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
