Conection with Backend, adding the configuration, services request and responses

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="grid text-center m-auto">
             <input class="input" type="text" id="" placeholder="email..." formControlName="email">
-            <input class="input" type="text" id="" placeholder="Password..." formControlName="password" >
+            <input class="input" type="password" id="" placeholder="Password..." formControlName="password" >
         </div>
         <div>
             <input [disabled]="!activeForm.valid" class="input-sub" type="submit" value="Submit">
