--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,11 +1,11 @@
-<app-menus></app-menus>
+<!-- <app-menus></app-menus> -->
 <app-header [margin]="false" ></app-header>
 
 <div>
     <form class="w-fit m-auto" [formGroup]="activeForm2" (submit)="submitLogin2()">
         <div class="grid w-auto">
-            <label for="nombre">Nombre:</label>
-            <input id="nombre" class="input" type="text" formControlName="name">
+            <label for="name">Nombre:</label>
+            <input id="name" class="input" type="text" formControlName="name">
         </div>
         <div class="grid w-auto">
             <label class="label" for="edad">Edad:</label>
@@ -17,9 +17,18 @@
         </div> 
         <div class="grid w-auto">
             <label class="label" for="password">Password:</label>
-            <input id="password" class="input" type="text" formControlName="password">
+            <input id="password" class="input" type="password" formControlName="password">
         </div>
-        <input type="submit" class="input-sub" value="Register" [disabled]="!activeForm2.valid">
+        <div class="flex gap-2.5">
+
+            <input type="submit" class="input-sub" value="Register" [disabled]="!activeForm2.valid">
+            @if(isRegister){
+                <div class="success">
+                    <p>Sign In Success</p>
+                    
+                </div>
+            }
+        </div>
     </form>
 </div>
 
