--- a/src/app/share/menus/menus.component.html
+++ b/src/app/share/menus/menus.component.html
@@ -12,6 +12,6 @@
         <mat-icon>login</mat-icon>
     </button>
     <mat-menu #menuOff="matMenu">
-        <button mat-menu-item>Sign Out</button>
+        <button (click)="logOut()" mat-menu-item>Sign Out</button>
     </mat-menu>
 </div>
